Bug 1300112 - Avoid duplicate push notifications by sending push messages to only one content process. r=kitcambridge a=gchang